Using Avenir font instead of Lato font, with line-height set to more. The Avenir font reference is from Bear Mac App from Shiny Frog

--- a/_sass/_site.sass
+++ b/_sass/_site.sass
@@ -220,7 +220,8 @@ body
 
   p
     font-size: 1.3em
-    line-height: 1.4
+    / * line-height: 1.4 - original */
+    line-height: 1.7
 
     @media #{$iphone-breakpoint}, #{$ipad-breakpoint}
       font-size: 2em
