--- a/css/styles.sass
+++ b/css/styles.sass
@@ -11,7 +11,8 @@ html
 
 body
   height: 100%
-  font-family : 'Lato', sans-serif
+  /* font-family : 'Lato', sans-serif - original */
+  font-family : 'Avenir', sans-serif
   font-size: 13.34px
   text-align: center
 
