--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="alternate" type="application/rss+xml" title="RSS" href="https://feed.rohinibarla.com" />
     <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,900,900i"
+      href="https://fonts.googleapis.com/css?family=Avenir:300,300i,400,400i,700,900,900i"
       rel="stylesheet"
       type="text/css"
     />
