--- a/_sass/_article.sass
+++ b/_sass/_article.sass
@@ -53,7 +53,8 @@
       font-size: 1em
 
     p
-      font-size: 1em
+      /* font-size: 1em - original */
+      font-size: 1.2em
       font-weight: 300
 
     p > img, figure > img
