made the text in dark mode, little less white

--- a/_sass/_site.sass
+++ b/_sass/_site.sass
@@ -4,7 +4,7 @@ $green-dark: hsla(69, 24%, 55%, 1)
 $green-hover-dark: hsla(69, 24%, 45%, 1)
 $green-light: #3C5011
 $green-hover-light: darken(#3C5011, 10%)
-$lightgrey: #eee
+$lightgrey: #aaa
 $grey: #888
 $anthracite: #333
 $darkgrey: #111
