added footer message to the Coding Empowerment program

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,10 +76,14 @@
         </div>
         {{ content }}
         <div class="footer">
+          
           <p>
             You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>.
             <!-- or on
             <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
+          </p>
+          <p>
+            Starting "Coding Empowerment" program on Nov 10th 2020. <br> Details <a href="https://enhance42.com/programs/coding-empowerment">here</a>.
           </p>
         </div>
       </div>
