--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
             <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
           </p>
           <p>
-            Starting "Coding Empowerment" program on Nov 10th 2020. <br> Details <a href="https://enhance42.com/programs/coding-empowerment">here</a>.
+            Starting "Gateway to R&D" program on Nov 10th 2020. <br> Details <a href="https://enhance42.com/programs/gateway-rnd-step-01">here</a>.
           </p>
         </div>
       </div>
