update the footer with twitter and upcoming programs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,15 +76,16 @@
         </div>
         {{ content }}
         <div class="footer">
+          <p>
+            Check the <a href="https://enhance42.com/programs/">training programs</a> I offer on Enhance42. 
+          </p>
+
+          <p>
+            You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>
+            or on
+            <a href="https://twitter.com/rohinibarla">Twitter</a>.
+          </p>
           
-          <p>
-            You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>.
-            <!-- or on
-            <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
-          </p>
-          <p>
-            Starting "Gateway to R&D" program on Nov 16th 2020. <br> Details <a href="https://enhance42.com/programs/gateway-rnd-step-01">here</a>.
-          </p>
         </div>
       </div>
     </div>
