link to C programming course

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,9 +81,10 @@
           </p> -->
 
           <p>
-            You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>
+            <!-- You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>
             or on
-            <a href="https://twitter.com/rohinibarla">Twitter</a>.
+            <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
+            You can join my course on C Programming at <a href="https://e42.dev/c">e42.dev/c</a> starting on Sep 16th 2022.
           </p>
           
         </div>
