--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,14 +77,14 @@
         {{ content }}
         <div class="footer">
           <!-- <p>
-            Check the <a href="https://enhance42.com/programs/">training programs</a> I offer on Enhance42. 
+            Check the <a href="https://enhance42.com/programs/">training programs</a> I offer at Enhance42. 
           </p> -->
 
           <p>
             <!-- You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>
             or on
             <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
-            <!-- Join C Programming at <a href="https://e42.dev/c">e42.dev/c</a><br>starting on Sep 16th 2022. -->
+            Join my <b>Coding Bridge Course</b> at <a href="https://e42.dev/bridge">e42.dev/bridge</a><br>Starting on June 5th 2023.<br>For inter completed students only.
           </p>
           
         </div>
