For beginner students only

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@
             <!-- You can reach me by <a href="mailto:rohinibarla@hey.com">email</a>
             or on
             <a href="https://twitter.com/rohinibarla">Twitter</a>. -->
-            Join my <b>Coding Bridge Course</b> at <a href="https://e42.dev/bridge">e42.dev/bridge</a><br>Starting on June 5th 2023.<br>For inter completed students only.
+            Join my <b>Coding Bridge Course</b> at <a href="https://e42.dev/bridge">e42.dev/bridge</a><br>Starting on June 5th 2023.<br>For beginner students only.
           </p>
           
         </div>
